@@ -2,24 +2,36 @@ package com.schemaplexai.service.agent.impl;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.schemaplexai.common.constant.CommonConstant;
 import com.schemaplexai.common.enums.AgentStatusEnum;
+import com.schemaplexai.common.enums.AgentExecutionStatusEnum;
 import com.schemaplexai.common.exception.BusinessException;
 import com.schemaplexai.common.result.PageResult;
 import com.schemaplexai.common.result.ResultCode;
 import com.schemaplexai.common.util.SecurityUtil;
+import com.schemaplexai.dao.mapper.AgentConfigMapper;
 import com.schemaplexai.dao.mapper.AgentContextBindingMapper;
 import com.schemaplexai.dao.mapper.AgentExecutionLogMapper;
 import com.schemaplexai.dao.mapper.AgentExecutionMapper;
 import com.schemaplexai.dao.mapper.AgentMapper;
 import com.schemaplexai.dao.mapper.AgentTeamMemberMapper;
+import com.schemaplexai.dao.mapper.AgentTeamMemberToolBindingMapper;
+import com.schemaplexai.dao.mapper.AgentToolBindingMapper;
+import com.schemaplexai.dao.mapper.BuiltinToolMapper;
 import com.schemaplexai.dao.mapper.ContextEntityMapper;
 import com.schemaplexai.dao.mapper.ContextItemMapper;
+import com.schemaplexai.dao.mapper.McpServerMapper;
+import com.schemaplexai.dao.mapper.SkillMapper;
+import com.schemaplexai.model.entity.BuiltinTool;
+import com.schemaplexai.model.entity.McpServer;
+import com.schemaplexai.model.entity.Skill;
 import com.schemaplexai.model.entity.ContextEntity;
 import com.schemaplexai.model.entity.ContextItem;
 import com.schemaplexai.model.converter.AgentConfigConverter;
 import com.schemaplexai.model.converter.AgentContextBindingConverter;
 import com.schemaplexai.model.converter.AgentConverter;
 import com.schemaplexai.model.converter.AgentTeamMemberConverter;
+import com.schemaplexai.model.converter.AgentToolBindingConverter;
 import com.schemaplexai.model.dto.agent.AgentConfigRequest;
 import com.schemaplexai.model.dto.agent.AgentContextBindingDTO;
 import com.schemaplexai.model.dto.agent.AgentCreateRequest;
@@ -28,15 +40,20 @@ import com.schemaplexai.model.dto.agent.AgentExecutionQueryDTO;
 import com.schemaplexai.model.dto.agent.AgentInitInstructionsDTO;
 import com.schemaplexai.model.dto.agent.AgentQueryRequest;
 import com.schemaplexai.model.dto.agent.AgentTeamMemberBatchRequest;
+import com.schemaplexai.model.dto.agent.AgentToolBindingBatchRequest;
 import com.schemaplexai.model.dto.agent.AgentUpdateRequest;
 import com.schemaplexai.service.agent.execution.AgentExecutionContext;
+import com.schemaplexai.service.agent.execution.AgentExecutionEvent;
 import com.schemaplexai.service.agent.execution.AgentExecutionEngine;
+import com.schemaplexai.service.agent.execution.ExecutionEventStreamService;
 import com.schemaplexai.model.entity.Agent;
 import com.schemaplexai.model.entity.AgentConfig;
 import com.schemaplexai.model.entity.AgentContextBinding;
 import com.schemaplexai.model.entity.AgentExecution;
 import com.schemaplexai.model.entity.AgentExecutionLog;
 import com.schemaplexai.model.entity.AgentTeamMember;
+import com.schemaplexai.model.entity.AgentToolBinding;
+import com.schemaplexai.model.entity.AgentTeamMemberToolBinding;
 import com.schemaplexai.model.vo.agent.AgentConfigVO;
 import com.schemaplexai.model.vo.agent.AgentContextBindingVO;
 import com.schemaplexai.model.vo.agent.AgentExecuteResultVO;
@@ -44,7 +61,10 @@ import com.schemaplexai.model.vo.agent.AgentExecutionLogVO;
 import com.schemaplexai.model.vo.agent.AgentExecutionVO;
 import com.schemaplexai.model.vo.agent.AgentInstructionsCheckVO;
 import com.schemaplexai.model.vo.agent.AgentTeamMemberVO;
+import com.schemaplexai.model.vo.agent.AgentTeamMemberToolBindingVO;
+import com.schemaplexai.model.vo.agent.AgentToolBindingVO;
 import com.schemaplexai.model.vo.agent.AgentVO;
+import com.schemaplexai.model.vo.agent.AvailableToolVO;
 import com.schemaplexai.service.agent.handler.AgentConfigHandler;
 import com.schemaplexai.service.agent.AgentService;
 import com.schemaplexai.service.agent.validator.AgentValidator;
@@ -57,8 +77,13 @@ import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 
 import java.time.LocalDateTime;
+import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -70,22 +95,30 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class AgentServiceImpl implements AgentService {
 
-    public static final String QUEUED = "queued";
+    public static final String QUEUED = AgentExecutionStatusEnum.QUEUED.getCode();
+    private final AgentConfigMapper agentConfigMapper;
     private final AgentMapper agentMapper;
     private final AgentTeamMemberMapper agentTeamMemberMapper;
     private final AgentContextBindingMapper agentContextBindingMapper;
     private final AgentExecutionMapper agentExecutionMapper;
     private final AgentExecutionLogMapper agentExecutionLogMapper;
+    private final BuiltinToolMapper builtinToolMapper;
+    private final SkillMapper skillMapper;
+    private final McpServerMapper mcpServerMapper;
+    private final AgentTeamMemberToolBindingMapper agentTeamMemberToolBindingMapper;
+    private final AgentToolBindingMapper agentToolBindingMapper;
     private final AgentConverter agentConverter;
     private final AgentConfigConverter agentConfigConverter;
     private final AgentTeamMemberConverter agentTeamMemberConverter;
     private final AgentContextBindingConverter agentContextBindingConverter;
+    private final AgentToolBindingConverter agentToolBindingConverter;
     private final AgentValidator agentValidator;
     private final AgentConfigHandler agentConfigHandler;
     private final EntityValidator entityValidator;
     private final ContextEntityMapper contextEntityMapper;
     private final ContextItemMapper contextItemMapper;
     private final AgentExecutionEngine agentExecutionEngine;
+    private final ExecutionEventStreamService executionEventStreamService;
 
     @Override
     public PageResult<AgentVO> listAgents(AgentQueryRequest request) {
@@ -103,7 +136,26 @@ public class AgentServiceImpl implements AgentService {
             wrapper.eq(Agent::getAgentType, request.getAgentType());
         }
         if (StringUtils.hasText(request.getStatus())) {
-            wrapper.eq(Agent::getStatus, request.getStatus());
+            // builtinPosition 场景下，忽略 status 过滤，始终返回该位置的内置 Agent
+            if (!StringUtils.hasText(request.getBuiltinPosition())) {
+                wrapper.eq(Agent::getStatus, request.getStatus());
+            }
+        }
+        if (StringUtils.hasText(request.getBuiltinPosition())) {
+            // 按内置位置筛选：匹配 sf_agent_config 中 config_key='builtin_position' AND config_value=? 的 Agent
+            var builtinAgentIds = agentConfigMapper.selectList(
+                    new LambdaQueryWrapper<AgentConfig>()
+                            .eq(AgentConfig::getConfigKey, "builtin_position")
+                            .eq(AgentConfig::getConfigValue, request.getBuiltinPosition()))
+                    .stream()
+                    .map(AgentConfig::getAgentId)
+                    .filter(StringUtils::hasText)
+                    .distinct()
+                    .toList();
+            if (builtinAgentIds.isEmpty()) {
+                return new PageResult<>(List.of(), 0L, request.getPage(), request.getSize());
+            }
+            wrapper.in(Agent::getId, builtinAgentIds);
         }
         if (StringUtils.hasText(request.getAgentTag())) {
             wrapper.like(Agent::getAgentTag, request.getAgentTag());
@@ -139,6 +191,11 @@ public class AgentServiceImpl implements AgentService {
         agent.setAgentTag(request.getAgentTag());
         agentMapper.insert(agent);
 
+        // solo 类型：自动预绑定全部内置工具
+        if ("solo".equalsIgnoreCase(agent.getAgentType())) {
+            prebindBuiltinToolsForSoloAgent(agent);
+        }
+
         log.info("创建Agent成功: agentId={}, name={}", agent.getId(), agent.getName());
         return enrichWithDetails(agent);
     }
@@ -164,6 +221,8 @@ public class AgentServiceImpl implements AgentService {
         updateEntity.setTriggerConfig(request.getTriggerConfig());
         updateEntity.setSkills(request.getSkills());
         updateEntity.setAgentTag(request.getAgentTag());
+        updateEntity.setAiModelType(request.getAiModelType());
+        updateEntity.setAiModelGroupId(request.getAiModelGroupId());
         agentMapper.updateById(updateEntity);
 
         log.info("更新Agent成功: agentId={}", id);
@@ -184,10 +243,26 @@ public class AgentServiceImpl implements AgentService {
 
         // 删除关联数据
         agentConfigHandler.deleteAllConfigs(id);
+        // 先查团队成员 ID，再删成员工具绑定
+        var members = agentTeamMemberMapper.selectList(
+                new LambdaQueryWrapper<AgentTeamMember>().eq(AgentTeamMember::getAgentId, id));
+        if (!CollectionUtils.isEmpty(members)) {
+            var memberIds = members.stream()
+                    .map(AgentTeamMember::getId)
+                    .filter(StringUtils::hasText)
+                    .toList();
+            if (!CollectionUtils.isEmpty(memberIds)) {
+                agentTeamMemberToolBindingMapper.delete(
+                        new LambdaQueryWrapper<AgentTeamMemberToolBinding>()
+                                .in(AgentTeamMemberToolBinding::getMemberId, memberIds));
+            }
+        }
         agentTeamMemberMapper.delete(
                 new LambdaQueryWrapper<AgentTeamMember>().eq(AgentTeamMember::getAgentId, id));
         agentContextBindingMapper.delete(
                 new LambdaQueryWrapper<AgentContextBinding>().eq(AgentContextBinding::getAgentId, id));
+        agentToolBindingMapper.delete(
+                new LambdaQueryWrapper<AgentToolBinding>().eq(AgentToolBinding::getAgentId, id));
         agentMapper.deleteById(id);
         log.info("删除Agent成功: agentId={}", id);
     }
@@ -249,7 +324,9 @@ public class AgentServiceImpl implements AgentService {
                 new LambdaQueryWrapper<AgentTeamMember>()
                         .eq(AgentTeamMember::getAgentId, agentId)
                         .orderByAsc(AgentTeamMember::getSortOrder));
-        return agentTeamMemberConverter.toVOList(members);
+        var memberVOs = agentTeamMemberConverter.toVOList(members);
+        enrichTeamMemberBoundTools(memberVOs);
+        return memberVOs;
     }
 
     @Override
@@ -257,6 +334,20 @@ public class AgentServiceImpl implements AgentService {
     public List<AgentTeamMemberVO> saveTeamMembers(String agentId, AgentTeamMemberBatchRequest request) {
         entityValidator.requireExists(agentMapper, agentId, ResultCode.AGENT_NOT_FOUND);
 
+        // 先清理旧成员的工具绑定
+        var existingMembers = agentTeamMemberMapper.selectList(
+                new LambdaQueryWrapper<AgentTeamMember>().eq(AgentTeamMember::getAgentId, agentId));
+        if (!CollectionUtils.isEmpty(existingMembers)) {
+            var memberIds = existingMembers.stream()
+                    .map(AgentTeamMember::getId)
+                    .filter(StringUtils::hasText)
+                    .toList();
+            if (!CollectionUtils.isEmpty(memberIds)) {
+                agentTeamMemberToolBindingMapper.delete(
+                        new LambdaQueryWrapper<AgentTeamMemberToolBinding>()
+                                .in(AgentTeamMemberToolBinding::getMemberId, memberIds));
+            }
+        }
         // 全量覆盖：先删后插
         agentTeamMemberMapper.delete(
                 new LambdaQueryWrapper<AgentTeamMember>().eq(AgentTeamMember::getAgentId, agentId));
@@ -302,6 +393,10 @@ public class AgentServiceImpl implements AgentService {
         if (member == null) {
             throw new BusinessException(ResultCode.AGENT_TEAM_MEMBER_NOT_FOUND);
         }
+        // 清理成员的工具绑定
+        agentTeamMemberToolBindingMapper.delete(
+                new LambdaQueryWrapper<AgentTeamMemberToolBinding>()
+                        .eq(AgentTeamMemberToolBinding::getMemberId, memberId));
         agentTeamMemberMapper.deleteById(memberId);
         // 成员删除后回算配置完成状态
         recomputeConfigCompleted(agentId);
@@ -333,7 +428,7 @@ public class AgentServiceImpl implements AgentService {
             context.setName(StringUtils.hasText(request.getTitle()) ? request.getTitle() : "Agent 手工上下文");
             context.setContextLevel("agent");
             context.setProjectId(agentId);
-            context.setStatus("active");
+            context.setStatus(CommonConstant.STATUS_ACTIVE);
             contextEntityMapper.insert(context);
 
             // 创建上下文条目
@@ -357,7 +452,7 @@ public class AgentServiceImpl implements AgentService {
         binding.setContent(request.getContent());
         binding.setTitle(request.getTitle());
         binding.setSortOrder(request.getSortOrder());
-        binding.setStatus("active");
+        binding.setStatus(CommonConstant.STATUS_ACTIVE);
         agentContextBindingMapper.insert(binding);
 
         // 绑定创建后回算配置完成状态
@@ -381,6 +476,296 @@ public class AgentServiceImpl implements AgentService {
         // 绑定删除后回算配置完成状态
         recomputeConfigCompleted(agentId);
         log.info("删除上下文绑定成功: agentId={}, bindingId={}", agentId, bindingId);
+    }
+
+    // ========== 工具绑定 ==========
+
+    @Override
+    public List<AgentToolBindingVO> getToolBindings(String agentId) {
+        entityValidator.requireExists(agentMapper, agentId, ResultCode.AGENT_NOT_FOUND);
+        var bindings = agentToolBindingMapper.selectList(
+                new LambdaQueryWrapper<AgentToolBinding>()
+                        .eq(AgentToolBinding::getAgentId, agentId)
+                        .orderByAsc(AgentToolBinding::getPriority)
+                        .orderByAsc(AgentToolBinding::getCreatedAt)
+        );
+        return agentToolBindingConverter.toVOList(bindings);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public List<AgentToolBindingVO> saveToolBindings(String agentId, AgentToolBindingBatchRequest request) {
+        var agent = entityValidator.requireExists(agentMapper, agentId, ResultCode.AGENT_NOT_FOUND);
+        String tenantId = StringUtils.hasText(SecurityUtil.getCurrentTenantId())
+                ? SecurityUtil.getCurrentTenantId() : agent.getTenantId();
+
+        agentToolBindingMapper.delete(new LambdaQueryWrapper<AgentToolBinding>()
+                .eq(AgentToolBinding::getAgentId, agentId));
+
+        if (request != null && !CollectionUtils.isEmpty(request.getTools())) {
+            Set<String> deduplicatedCodes = new HashSet<>();
+            for (var item : request.getTools()) {
+                if (item == null || !StringUtils.hasText(item.getToolCode())) {
+                    continue;
+                }
+                String normalizedCode = item.getToolCode().trim();
+                if (!deduplicatedCodes.add(normalizedCode)) {
+                    continue;
+                }
+
+                String sourceType = StringUtils.hasText(item.getSourceType()) ? item.getSourceType().trim() : "builtin";
+                if ("mcp".equals(sourceType) && !StringUtils.hasText(item.getSourceRefId())) {
+                    throw new BusinessException(ResultCode.BAD_REQUEST, "MCP 工具必须指定 sourceRefId");
+                }
+                if ("skill".equals(sourceType) && !StringUtils.hasText(item.getSourceRefId())) {
+                    throw new BusinessException(ResultCode.BAD_REQUEST, "Skill 工具必须指定 sourceRefId");
+                }
+
+                var binding = new AgentToolBinding();
+                binding.setTenantId(tenantId);
+                binding.setAgentId(agentId);
+                binding.setToolCode(normalizedCode);
+                binding.setSourceType(sourceType);
+                binding.setSourceRefId(item.getSourceRefId());
+                binding.setEnabled(item.getEnabled() == null || item.getEnabled());
+                binding.setPriority(item.getPriority() == null ? 100 : item.getPriority());
+                binding.setConfigOverride(item.getConfigOverride());
+                agentToolBindingMapper.insert(binding);
+            }
+        }
+
+        log.info("批量保存 Agent 工具绑定成功: agentId={}, count={}", agentId,
+                request != null && request.getTools() != null ? request.getTools().size() : 0);
+        return getToolBindings(agentId);
+    }
+
+    @Override
+    public List<AvailableToolVO> getAvailableTools(String agentId) {
+        var agent = entityValidator.requireExists(agentMapper, agentId, ResultCode.AGENT_NOT_FOUND);
+
+        // 获取已绑定工具的 key 集合
+        var boundBindings = agentToolBindingMapper.selectList(
+                new LambdaQueryWrapper<AgentToolBinding>()
+                        .eq(AgentToolBinding::getAgentId, agentId));
+        Set<String> boundKeys = boundBindings.stream()
+                .map(this::buildToolKey)
+                .collect(Collectors.toSet());
+
+        Map<String, AvailableToolVO> mergedTools = new LinkedHashMap<>();
+        for (AvailableToolVO tool : loadBuiltinTools(boundKeys)) {
+            mergedTools.putIfAbsent(buildToolKey(tool.getSourceType(), tool.getSourceRefId(), tool.getToolCode()), tool);
+        }
+        for (AvailableToolVO tool : loadSkillTools(agent.getTenantId(), boundKeys)) {
+            mergedTools.putIfAbsent(buildToolKey(tool.getSourceType(), tool.getSourceRefId(), tool.getToolCode()), tool);
+        }
+        for (AvailableToolVO tool : loadMcpTools(agent.getTenantId(), boundKeys)) {
+            mergedTools.putIfAbsent(buildToolKey(tool.getSourceType(), tool.getSourceRefId(), tool.getToolCode()), tool);
+        }
+        return new ArrayList<>(mergedTools.values());
+    }
+
+    private void prebindBuiltinToolsForSoloAgent(Agent agent) {
+        var builtinTools = builtinToolMapper.selectList(
+                new LambdaQueryWrapper<BuiltinTool>()
+                        .eq(BuiltinTool::getEnabled, true)
+                        .orderByAsc(BuiltinTool::getSortOrder));
+        if (CollectionUtils.isEmpty(builtinTools)) {
+            return;
+        }
+
+        String tenantId = StringUtils.hasText(SecurityUtil.getCurrentTenantId())
+                ? SecurityUtil.getCurrentTenantId() : agent.getTenantId();
+        Set<String> deduplicatedCodes = new HashSet<>();
+        int priority = 100;
+        for (BuiltinTool builtinTool : builtinTools) {
+            if (!StringUtils.hasText(builtinTool.getCode())) {
+                continue;
+            }
+            String toolCode = builtinTool.getCode().trim();
+            if (!deduplicatedCodes.add(toolCode)) {
+                continue;
+            }
+            var binding = new AgentToolBinding();
+            binding.setTenantId(tenantId);
+            binding.setAgentId(agent.getId());
+            binding.setToolCode(toolCode);
+            binding.setSourceType("builtin");
+            binding.setEnabled(true);
+            binding.setPriority(priority++);
+            agentToolBindingMapper.insert(binding);
+        }
+        log.info("Solo Agent 预绑定内置工具完成: agentId={}, count={}", agent.getId(), deduplicatedCodes.size());
+    }
+
+    private List<AvailableToolVO> loadBuiltinTools(Set<String> boundKeys) {
+        var builtinTools = builtinToolMapper.selectList(
+                new LambdaQueryWrapper<BuiltinTool>()
+                        .eq(BuiltinTool::getEnabled, true)
+                        .orderByAsc(BuiltinTool::getSortOrder));
+
+        return builtinTools.stream()
+                .filter(tool -> StringUtils.hasText(tool.getCode()))
+                .map(tool -> {
+                    var availableTool = new AvailableToolVO();
+                    availableTool.setToolCode(tool.getCode().trim());
+                    availableTool.setName(tool.getName());
+                    availableTool.setDescription(tool.getDescription());
+                    availableTool.setInputSchema(tool.getInputSchema());
+                    availableTool.setOsSupport(tool.getOsSupport());
+                    availableTool.setSourceType("builtin");
+                    availableTool.setSourceRefId(null);
+                    availableTool.setAlreadyBound(boundKeys.contains(
+                            buildToolKey("builtin", null, tool.getCode())));
+                    return availableTool;
+                })
+                .toList();
+    }
+
+    private List<AvailableToolVO> loadSkillTools(String tenantId, Set<String> boundKeys) {
+        var wrapper = new LambdaQueryWrapper<Skill>()
+                .eq(Skill::getStatus, CommonConstant.STATUS_ACTIVE)
+                .orderByAsc(Skill::getDisplayName)
+                .orderByAsc(Skill::getName);
+        if (StringUtils.hasText(tenantId)) {
+            wrapper.and(w -> w.eq(Skill::getTenantId, tenantId).or().isNull(Skill::getTenantId));
+        } else {
+            wrapper.isNull(Skill::getTenantId);
+        }
+
+        var skills = skillMapper.selectList(wrapper);
+        Map<String, AvailableToolVO> deduplicated = new LinkedHashMap<>();
+        for (Skill skill : skills) {
+            if (!StringUtils.hasText(skill.getName())) {
+                continue;
+            }
+            String toolCode = skill.getName().trim();
+            String key = buildToolKey("skill", skill.getId(), toolCode);
+            if (deduplicated.containsKey(key)) {
+                continue;
+            }
+            var availableTool = new AvailableToolVO();
+            availableTool.setToolCode(toolCode);
+            availableTool.setName(StringUtils.hasText(skill.getDisplayName()) ? skill.getDisplayName() : toolCode);
+            availableTool.setDescription(skill.getDescription());
+            availableTool.setSourceType("skill");
+            availableTool.setSourceRefId(skill.getId());
+            availableTool.setAlreadyBound(boundKeys.contains(key));
+            deduplicated.put(key, availableTool);
+        }
+        return new ArrayList<>(deduplicated.values());
+    }
+
+    private List<AvailableToolVO> loadMcpTools(String tenantId, Set<String> boundKeys) {
+        if (!StringUtils.hasText(tenantId)) {
+            return List.of();
+        }
+        var mcpServers = mcpServerMapper.selectList(
+                new LambdaQueryWrapper<McpServer>()
+                        .eq(McpServer::getTenantId, tenantId)
+                        .eq(McpServer::getStatus, CommonConstant.STATUS_ACTIVE)
+                        .orderByAsc(McpServer::getName));
+
+        List<AvailableToolVO> results = new ArrayList<>();
+        Set<String> deduplicatedKeys = new HashSet<>();
+        for (McpServer mcpServer : mcpServers) {
+            if (CollectionUtils.isEmpty(mcpServer.getTools())) {
+                continue;
+            }
+            for (Object toolObject : mcpServer.getTools()) {
+                if (!(toolObject instanceof Map<?, ?> toolMap)) {
+                    continue;
+                }
+                Object toolNameObj = toolMap.get("name");
+                if (toolNameObj == null || !StringUtils.hasText(String.valueOf(toolNameObj))) {
+                    continue;
+                }
+                String toolCode = String.valueOf(toolNameObj).trim();
+                String key = buildToolKey("mcp", mcpServer.getId(), toolCode);
+                if (!deduplicatedKeys.add(key)) {
+                    continue;
+                }
+                var availableTool = new AvailableToolVO();
+                availableTool.setToolCode(toolCode);
+                availableTool.setName(toolCode);
+                Object description = toolMap.get("description");
+                availableTool.setDescription(description != null ? String.valueOf(description) : null);
+                Object inputSchema = toolMap.get("inputSchema");
+                if (inputSchema == null) {
+                    inputSchema = toolMap.get("input_schema");
+                }
+                availableTool.setInputSchema(inputSchema != null ? String.valueOf(inputSchema) : null);
+                availableTool.setSourceType("mcp");
+                availableTool.setSourceRefId(mcpServer.getId());
+                availableTool.setAlreadyBound(boundKeys.contains(key));
+                results.add(availableTool);
+            }
+        }
+        return results;
+    }
+
+    private String buildToolKey(AgentToolBinding binding) {
+        if (binding == null) {
+            return "builtin||";
+        }
+        return buildToolKey(binding.getSourceType(), binding.getSourceRefId(), binding.getToolCode());
+    }
+
+    private String buildToolKey(String sourceType, String sourceRefId, String toolCode) {
+        String normalizedSourceType = StringUtils.hasText(sourceType) ? sourceType.trim().toLowerCase() : "builtin";
+        String normalizedSourceRefId = StringUtils.hasText(sourceRefId) ? sourceRefId.trim() : "";
+        String normalizedToolCode = StringUtils.hasText(toolCode) ? toolCode.trim().toLowerCase() : "";
+        return normalizedSourceType + "|" + normalizedSourceRefId + "|" + normalizedToolCode;
+    }
+
+    private void enrichTeamMemberBoundTools(List<AgentTeamMemberVO> memberVOs) {
+        if (CollectionUtils.isEmpty(memberVOs)) {
+            return;
+        }
+        var memberIds = memberVOs.stream()
+                .map(AgentTeamMemberVO::getId)
+                .filter(StringUtils::hasText)
+                .toList();
+        if (CollectionUtils.isEmpty(memberIds)) {
+            return;
+        }
+        var bindings = agentTeamMemberToolBindingMapper.selectList(
+                new LambdaQueryWrapper<AgentTeamMemberToolBinding>()
+                        .in(AgentTeamMemberToolBinding::getMemberId, memberIds)
+                        .orderByAsc(AgentTeamMemberToolBinding::getPriority)
+                        .orderByAsc(AgentTeamMemberToolBinding::getCreatedAt));
+
+        var grouped = bindings.stream()
+                .map(this::toMemberToolBindingVO)
+                .collect(Collectors.groupingBy(
+                        AgentTeamMemberToolBindingVO::getMemberId,
+                        LinkedHashMap::new,
+                        Collectors.toList()));
+
+        for (AgentTeamMemberVO memberVO : memberVOs) {
+            var memberTools = grouped.getOrDefault(memberVO.getId(), List.of());
+            memberVO.setBoundTools(memberTools);
+            memberVO.setBoundToolCount(memberTools.size());
+            String toolNames = memberTools.stream()
+                    .map(AgentTeamMemberToolBindingVO::getToolCode)
+                    .filter(StringUtils::hasText)
+                    .distinct()
+                    .collect(Collectors.joining(","));
+            memberVO.setBoundToolNames(StringUtils.hasText(toolNames) ? toolNames : null);
+        }
+    }
+
+    private AgentTeamMemberToolBindingVO toMemberToolBindingVO(AgentTeamMemberToolBinding binding) {
+        var vo = new AgentTeamMemberToolBindingVO();
+        vo.setId(binding.getId());
+        vo.setMemberId(binding.getMemberId());
+        vo.setToolCode(binding.getToolCode());
+        vo.setSourceType(binding.getSourceType());
+        vo.setSourceRefId(binding.getSourceRefId());
+        vo.setEnabled(binding.getEnabled());
+        vo.setPriority(binding.getPriority());
+        vo.setConfigOverride(binding.getConfigOverride());
+        vo.setCreatedAt(binding.getCreatedAt());
+        return vo;
     }
 
     /**
@@ -437,12 +822,14 @@ public class AgentServiceImpl implements AgentService {
                 .toList();
         vo.setBuiltinPositions(builtinPositions);
         vo.setAgentTag(agent.getAgentTag());
-        // 附加团队成员
+        // 附加团队成员（含工具绑定信息）
         var members = agentTeamMemberMapper.selectList(
                 new LambdaQueryWrapper<AgentTeamMember>()
                         .eq(AgentTeamMember::getAgentId, agent.getId())
                         .orderByAsc(AgentTeamMember::getSortOrder));
-        vo.setTeamMembers(agentTeamMemberConverter.toVOList(members));
+        var memberVOs = agentTeamMemberConverter.toVOList(members);
+        enrichTeamMemberBoundTools(memberVOs);
+        vo.setTeamMembers(memberVOs);
         // 附加上下文绑定
         var bindings = agentContextBindingMapper.selectList(
                 new LambdaQueryWrapper<AgentContextBinding>()
@@ -478,6 +865,12 @@ public class AgentServiceImpl implements AgentService {
         execution.setAiModel(StringUtils.hasText(dto.getModel()) ? dto.getModel() : agent.getAiModel());
         execution.setStatus(QUEUED);
         agentExecutionMapper.insert(execution);
+        executionEventStreamService.publish(AgentExecutionEvent.builder()
+                .eventType("QUEUED")
+                .executionId(execution.getId())
+                .message("执行已加入队列")
+                .timestamp(Instant.now())
+                .build());
 
         // 入队后立即异步触发执行引擎（insert 已自动提交，异步线程可直接读到该记录）
         agentExecutionEngine.execute(AgentExecutionContext.builder()
@@ -486,6 +879,8 @@ public class AgentServiceImpl implements AgentService {
                 .tenantId(SecurityUtil.getCurrentTenantId())
                 .inputPrompt(dto.getPrompt())
                 .model(execution.getAiModel())
+                .agentModelType(agent.getAiModelType())
+                .agentModelGroupId(agent.getAiModelGroupId())
                 .inputContext(dto.getContext())
                 .stream(Boolean.TRUE.equals(dto.getStream()))
                 .build());
@@ -517,7 +912,7 @@ public class AgentServiceImpl implements AgentService {
         var result = agentExecutionMapper.selectPage(page, wrapper);
         var voList = result.getRecords().stream()
                 .map(this::toExecutionVO)
-                .collect(Collectors.toList());
+                .toList();
         return new PageResult<>(voList, result.getTotal(), result.getCurrent(), result.getSize());
     }
 
@@ -537,7 +932,7 @@ public class AgentServiceImpl implements AgentService {
                 new LambdaQueryWrapper<AgentExecutionLog>()
                         .eq(AgentExecutionLog::getExecutionId, executionId)
                         .orderByAsc(AgentExecutionLog::getCreatedAt));
-        vo.setLogs(logs.stream().map(this::toLogVO).collect(Collectors.toList()));
+        vo.setLogs(logs.stream().map(this::toLogVO).toList());
         return vo;
     }
 
@@ -552,14 +947,20 @@ public class AgentServiceImpl implements AgentService {
         if (execution == null) {
             throw new BusinessException(ResultCode.AGENT_EXECUTION_NOT_FOUND);
         }
-        if (!QUEUED.equals(execution.getStatus()) && !"running".equals(execution.getStatus())) {
+        if (!QUEUED.equals(execution.getStatus()) && !AgentExecutionStatusEnum.RUNNING.getCode().equals(execution.getStatus())) {
             throw new BusinessException(ResultCode.BAD_REQUEST);
         }
         var update = new AgentExecution();
         update.setId(executionId);
-        update.setStatus("stopped");
+        update.setStatus(AgentExecutionStatusEnum.STOPPED.getCode());
         update.setCompletedAt(LocalDateTime.now());
         agentExecutionMapper.updateById(update);
+        executionEventStreamService.publish(AgentExecutionEvent.builder()
+                .eventType("CANCELLED")
+                .executionId(executionId)
+                .message("执行已取消")
+                .timestamp(Instant.now())
+                .build());
         log.info("停止Agent执行: agentId={}, executionId={}", agentId, executionId);
     }
 
